# SistemaDeVigilancia

./: .gitignore  Cargo.toml  README.md  aux_json_accidente.json  aux_json_incendio.json  camaras.sh  cameras.properties  credentials.txt  detector.sh  dron3.sh  dron4.sh  dron5.sh  dron6.sh  dron7.sh  log.txt  log_sist_camaras.txt  message_broker_client_config.properties  message_broker_server_config.properties  monitoreo.sh  s_log.txt  server.sh  sistema_camaras.properties  sistema_monitoreo.properties
.github/workflows/: ci.yml
src/: broker_errors.rs  camera.rs  camera_state.rs  connack-message  connack_message.rs  connack_session_present.rs  connect-flags.rs  connect-return-code.rs  connect.rs  connect_fixed_header.rs  connect_flags.rs  connect_message.rs  connect_message_payload.rs  connect_return_code.rs  connect_variable_header.rs  connected_user.rs  credentials.txt  disconnect_fixed_header.rs  disconnect_message.rs  fixed_header.rs  generar_camaras.rs  lib.rs  log.txt  logger.rs  main.rs  message-broker-client.rs  message-broker-server.rs  message-broker.server.rs  message_broker_client.rs  message_broker_server.rs  mqtt_client.rs  mqtt_server.rs  mqtt_server_client_utils.rs  puback_message.rs  publish_fixed_header.rs  publish_flags.rs  publish_message.rs  publish_payload.rs  publish_variable_header.rs  sistema_camaras.rs  (+16 more)
src/apps/: api_sistema_monitoreo.rs  app_type.rs  apps_mqtt_topics.rs  camara_errors.rs  camera.rs  camera_state.rs  common_client_errors.rs  common_clients.rs  dron.rs  dron_app.rs  dron_current_info.rs  dron_flying_info.rs  dron_main.rs  dron_state.rs  generar_camaras.rs  incident.rs  incident_info.rs  incident_source.rs  incident_state.rs  local_tiles.rs  manage_stored_cameras.rs  mod.rs  place_type.rs  places.rs  plugins.rs  properties.rs  sist_camaras_abm.rs  sist_cams_mqtt_properties.rs  sist_cams_ui_properties.rs  sist_dron_properties.rs  sist_monit_ui_properties.rs  sistema_camaras.rs  sistema_camaras_main.rs  sistema_dron.properties  sistema_monitoreo.rs  sistema_monitoreo_main.rs  ui_sistema_monitoreo.rs  windows.rs
src/apps/azure_model/: ai_detector_main.rs  api_credentials.rs  automatic_incident_detector.rs  mod.rs
src/apps/incident_data/: incident.rs  incident_info.rs  mod.rs
src/apps/sist_camaras/: ai_detector_main.rs  automatic_incident_detector.rs  camera.rs  camera_state.rs  logic.rs  manage_stored_cameras.rs  mod.rs  parse_json.rs  shareable_cameras_type.rs  sist_camaras_abm.rs  sist_cams_mqtt_properties.rs  sistema_camaras.rs  sistema_camaras_abm.rs  sistema_camaras_logic.rs  sistema_camaras_main.rs  sistema_camaras_version_2.rs
src/apps/sist_dron/: battery_manager.rs  calculations.rs  data.rs  dron.rs  dron_current_info.rs  dron_flying_info.rs  dron_logic.rs  dron_main.rs  dron_state.rs  mod.rs  qos_dron.properties  sist_dron_properties.rs  sistema_dron.properties  utils.rs
src/apps/sist_monitoreo/: api_sistema_monitoreo.rs  mod.rs  monitoreo_errors.rs  order_checker.rs  (+4 more)
src/logging/: logger.rs  mod.rs  string_logger.rs  string_logger_writer.rs  structs_to_save_in_logger.rs  time.rs
src/message-broker/: Cargo.toml
src/messages/: connack_message.rs  connect_message.rs  connect_variable_header.rs  disconnect_fixed_header.rs  disconnect_message.rs  message_type.rs  mod.rs  publish_fixed_header.rs  publish_message.rs  suback_message.rs  unsuback_fixed_header.rs  unsuback_message.rs  unsubscribe_message.rs  unsubscribe_payload.rs  unsubscribe_variable_header.rs
src/mqtt/: mod.rs  stream_type.rs
src/mqtt_client/: message_broker_client.rs  mqtt_client.rs
src/mqtt_server/: message_broker_server.rs  mod.rs  mqtt_server.rs
src/mqtt_utils/: mod.rs  mqtt_server_client_utils.rs
tests/: mqtt_client_tests.rs
walkers/src/: sources.rs  tiles.rs
(+92 files in other folders)
