[package]
name = "rustx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
config = "0.11.0"
uuid = "1.0.0-alpha.1"
rand = "0.8"
des = "0.7"
block-modes = "0.8"
hex = "0.4"
egui = "0.27"
egui_extras = { version = "0.27", features = ["svg"] }
eframe = "0.27"
egui-winit = "0.27"
image = { version = "0.25", features = ["jpeg", "png"] }
geo-types = { version = "0.7" }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
futures = "0.3.28"
reqwest-middleware = "0.2.4"
tokio = { version = "1.28", features = ["macros"] }
http-cache-reqwest = "0.13.0"
thiserror = "1"


[[bin]]
name = "message_broker_client"
path = "src/message_broker_client.rs"

[[bin]]
name = "message_broker_server"
path = "src/message_broker_server.rs"

[[bin]]
name = "sistema_monitoreo"
path = "src/apps/sistema_monitoreo.rs"

[[bin]]
name = "sistema_camaras"
path = "src/apps/sistema_camaras.rs"

[[bin]]
name = "generar_camaras"
path = "src/apps/generar_camaras.rs"