[package]
name = "rustx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
config = "0.11.0"
uuid = "1.0.0-alpha.1"
rand = "0.8"
des = "0.7"
crossbeam = "0.8"
block-modes = "0.8"
hex = "0.4"
egui = "0.27"
egui_extras = { version = "0.27", features = ["svg"] }
eframe = "0.27"
egui-winit = "0.27"
image = { version = "0.23.14", features = ["jpeg", "png"] }
geo-types = { version = "0.7" }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls", "blocking", "json"
] }
futures = "0.3.28"
reqwest-middleware = "0.2.4"
tokio = { version = "1.28", features = ["macros"] }
http-cache-reqwest = "0.13.0"
thiserror = "1"
crossbeam-channel = "0.5.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"



[[bin]]
name = "message_broker_server"
path = "src/mqtt/server/message_broker_server.rs"

[[bin]]
name = "sistema_monitoreo_main"
path = "src/apps/sist_monitoreo/sistema_monitoreo_main.rs"

[[bin]]
name = "sistema_camaras_main"
path = "src/apps/sist_camaras/sistema_camaras_main.rs"

[[bin]]
name = "ai_detector_main"
path = "src/apps/sist_camaras/ai_detector_main.rs"

[[bin]]
name = "dron_main"
path = "src/apps/sist_dron/dron_main.rs"